kubernetes/organizr/external-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: organizr-external
  namespace: default
  labels:
    traffic-type: external
  annotations:
    traefik.frontend.rule.type: PathPrefix
spec:
  rules:
  - host: organizr.ext.perkplex.geekgalaxy.com
    http:
      paths:
      - path: /
        backend:
          serviceName: organizr
          servicePort: 80
